manifests/vaultwarden/manifest.yaml
---
# Source: vaultwarden/templates/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-vaultwarden
  labels:
    helm.sh/chart: vaultwarden-0.1.0
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.31.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: release-name
---
# Source: vaultwarden/templates/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-vaultwarden
  labels:
    helm.sh/chart: vaultwarden-0.1.0
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.31.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        helm.sh/chart: vaultwarden-0.1.0
        app.kubernetes.io/name: vaultwarden
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: "1.31.0"
        app.kubernetes.io/managed-by: Helm
        app: vault
    spec:
      serviceAccountName: release-name-vaultwarden
      securityContext:
        {}
      containers:
        - name: vaultwarden
          securityContext:
            {}
          image: "vaultwarden/server:1.31.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            failureThreshold: 1
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 3
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /data
              name: vaultwarden-config
      volumes:
        - hostPath:
            path: /config/vaultwarden
            type: Directory
          name: vaultwarden-config
---
# Source: vaultwarden/templates/app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-vaultwarden
  labels:
    helm.sh/chart: vaultwarden-0.1.0
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.31.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  ingressClassName: traefik
  rules:
    - host: "passwords.jishihome.xyz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-vaultwarden
                port:
                  number: 80
